--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,25 @@
 [project]
 name = "mc-wiki-scraper"
-version = "0.1.3"
+version = "0.1.4"
 description = "Scrape and analyze articles from minecraft.wiki"
 authors = [{name = "Oskar Rowicki", email = "oskar.rowicki@gmail.com"}]
 license = {file = "LICENSE"}
 readme = "README.md"
 requires-python = ">=3.11"
+
+keywords = ["minecraft", "wiki", "scraping", "text-analysis", "nlp"]
+
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: End Users/Desktop",
+    "Environment :: Console",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Operating System :: OS Independent",
+    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
+    "Topic :: Text Processing",
+]
 
 dependencies = [
     "pandas>=3.0.0",
@@ -29,3 +43,4 @@ build-backend = "hatchling.build"
 
 [project.urls]
 "Source" = "https://github.com/orowicki/wiki-scraper"
+
